--- a/home2.html
+++ b/home2.html
@@ -24,10 +24,74 @@
     <main>
         <h1 class="h1">Home</h1>
         <table>
-            <tr><th>Popular Women's Wear of Focallure Redefined</th></tr>
-            <!--Create a table for female's wear-->
-
+            <tr><th colspan="3">Popular Women's Wear of Focallure Redefined</th></tr>
+            <tr><td><a href="bluetrousers.jpg">
+                <figure><img src="womanblue.png" 
+                    height="150px" width="150px">
+                    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Blue Plazzo
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 115.50</figcaption></figure></a>
+            </td>
+            <td><a href="greenpants.jpg">
+                <figure><img src="greenpantsthumbnail.png" 
+                    height="150px" width="150px">
+                    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Green is The New Black
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 125.50</figcaption></figure></a>
+            </td>
+            <td><a href="shirt&jeans.jpg">
+                <figure><img src="shirt&jeansthumbnail.png" 
+                    height="150px" width="150px">
+                    <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Sexy Li'l Thing
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 105.50</figcaption></figure></a>
+            </td>
+        </tr>
+        <tr><td><a href="blue&white.jpg">
+            <figure><img src="blue&whitethumbnail.png" 
+                height="150px" width="150px">
+                <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Sweet Symphony: Jacket
+                    <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 175.50</figcaption></figure></a>
+        </td>
+        <td><a href="shirt&pant.jpg">
+            <figure><img src="shirt&pantthumbnail.png" 
+                height="150px" width="150px">
+                <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;She's in Business
+                    <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 144.50</figcaption></figure></a>
+        </td>
+        <td><a href="setCasual.jpg">
+            <figure><img src="setCasualthumbnail.png" 
+                height="150px" width="150px">
+                <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Girl o' My Dreams
+                    <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 87.50</figcaption></figure></a>
+        </td>
+    </tr>
+    <tr><td><a href="bohemian.jpg">
+        <figure><img src="bohemianthumbnail.jpg.png" 
+            height="150px" width="150px">
+            <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Bohemian
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 119.50</figcaption></figure></a>
+    </td>
+    <td><a href="redpants.jpg">
+        <figure><img src="redpantsthumbnail.png" 
+            height="150px" width="150px">
+            <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Back in Business
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 89.50</figcaption></figure></a>
+    </td>
+    <td><a href="setCasual.jpg">
+        <figure><img src="setCasualthumbnail.png" 
+            height="150px" width="150px">
+            <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;Bohemian Allrounder
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;RM 78.50</figcaption></figure></a>
+    </td>
+       </tr>
         </table>
+        <p>
+           <h2>
+            Want men exclusive product?<br>
+            <a href="home.html">Click here</a>
+            <br><br>
+              Found Something you Fancy?<br> 
+              Then <a href="contact.html">Click here</a>
+            </h2>
+        </p>
     </main>
     </body>
     <footer>
