--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" 
          content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>About Us</title>
         <link rel="stylesheet" href="assignment.css" media="screen">
         <link rel="icon" href="ms-icon-144x144.png" type="image/x-icon">
         <style>
