--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         Contact us.
         <br>
         <h2>Quick contact: </h2>
-        <form action="http://webdevbasics.net/scripts/javajam.php" method="POST">
+        <form action="form-handling.php" method="POST">
             <label>*Name: </label>
             <input type="text" name="myName" size="25" maxlength="25" placeholder="your name" required>
             <br>
